@@ -5,17 +5,18 @@
  * For commercial licenses see https://www.tiny.cloud/
  */
 
-import { CharacterData, Node } from '@ephox/dom-globals';
+import { Node, Text } from '@ephox/dom-globals';
+import { Unicode } from '@ephox/katamari';
 import TreeWalker from 'tinymce/core/api/dom/TreeWalker';
 import Schema, { SchemaMap } from 'tinymce/core/api/html/Schema';
+
+const trimZwsp = (text: string) => text.replace(new RegExp(Unicode.zeroWidth, 'g'), '');
 
 const getText = (node: Node, schema: Schema): string[] => {
   const blockElements: SchemaMap = schema.getBlockElements();
   const shortEndedElements: SchemaMap = schema.getShortEndedElements();
 
-  const isNewline = (node: Node) => (
-    blockElements[node.nodeName] || shortEndedElements[node.nodeName]
-  );
+  const isNewline = (node: Node) => blockElements[node.nodeName] || shortEndedElements[node.nodeName];
 
   const textBlocks: string[] = [];
   let txt = '';
@@ -23,7 +24,7 @@ const getText = (node: Node, schema: Schema): string[] => {
 
   while ((node = treeWalker.next())) {
     if (node.nodeType === 3) {
-      txt += (node as CharacterData).data;
+      txt += trimZwsp((node as Text).data);
     } else if (isNewline(node) && txt.length) {
       textBlocks.push(txt);
       txt = '';
