@@ -1,12 +1,12 @@
 import { Pipeline, Step } from '@ephox/agar';
 import { Assert, UnitTest } from '@ephox/bedrock-client';
-import { TinyLoader } from '@ephox/mcagar';
 import { Node } from '@ephox/dom-globals';
+import { TinyLoader } from '@ephox/mcagar';
 import Editor from 'tinymce/core/api/Editor';
+import { getText } from 'tinymce/plugins/wordcount/core/GetText';
 
 import Plugin from 'tinymce/plugins/wordcount/Plugin';
 import Theme from 'tinymce/themes/silver/Theme';
-import { getText } from 'tinymce/plugins/wordcount/core/GetText';
 
 UnitTest.asynctest('browser.tinymce.plugins.wordcount.GetTextTest', (success, failure) => {
   Plugin();
@@ -25,7 +25,7 @@ UnitTest.asynctest('browser.tinymce.plugins.wordcount.GetTextTest', (success, fa
       sAssertGetText(c('<p></p>'), []),
       sAssertGetText(c('<p>a b</p>'), [ 'a b' ]),
       sAssertGetText(c('<p>a&nbsp;b</p>'), [ 'a\u00a0b' ]),
-      sAssertGetText(c('<p>a\uFEFFb</p>'), [ 'a\uFEFFb' ]),
+      sAssertGetText(c('<p>a\uFEFFb</p>'), [ 'ab' ]),
       sAssertGetText(c('<p><span>a</span> b</p>'), [ 'a b' ]),
       sAssertGetText(c('<p>a</p><p>b</p>'), [ 'a', 'b' ]),
       sAssertGetText(c('<p>a<br>b</p>'), [ 'a', 'b' ])
